--- a/src/main/resources/com/company/jmixpm/messages_en.properties
+++ b/src/main/resources/com/company/jmixpm/messages_en.properties
@@ -9,6 +9,12 @@ com.company.jmixpm.entity/Project.manager=Manager
 com.company.jmixpm.entity/Project.name=Name
 com.company.jmixpm.entity/Project.startDate=Start date
 com.company.jmixpm.entity/Project.tasks=Tasks
+com.company.jmixpm.entity/ProjectStats=Project stats
+com.company.jmixpm.entity/ProjectStats.actualEfforts=Actual efforts
+com.company.jmixpm.entity/ProjectStats.id=Id
+com.company.jmixpm.entity/ProjectStats.plannedEfforts=Planned efforts
+com.company.jmixpm.entity/ProjectStats.projectName=Project name
+com.company.jmixpm.entity/ProjectStats.tasksCount=Tasks count
 
 com.company.jmixpm.entity/Task=Task
 com.company.jmixpm.entity/Task.assignee=Assignee
@@ -17,6 +23,13 @@ com.company.jmixpm.entity/Task.id=Id
 com.company.jmixpm.entity/Task.name=Name
 com.company.jmixpm.entity/Task.project=Project
 com.company.jmixpm.entity/Task.startDate=Start date
+com.company.jmixpm.entity/TimeEntry=Time entry
+com.company.jmixpm.entity/TimeEntry.description=Description
+com.company.jmixpm.entity/TimeEntry.entryDate=Entry date
+com.company.jmixpm.entity/TimeEntry.id=Id
+com.company.jmixpm.entity/TimeEntry.task=Task
+com.company.jmixpm.entity/TimeEntry.timeSpent=Time Spent
+com.company.jmixpm.entity/TimeEntry.user=User
 
 com.company.jmixpm.entity/User=User
 com.company.jmixpm.entity/User.active=Active
@@ -44,6 +57,10 @@ com.company.jmixpm.screen.main/application.logoLabel = Jmix Pm application
 com.company.jmixpm.screen.main/sideMenuCollapse = Collapse menu
 com.company.jmixpm.screen.main/logoutBtnDescription = Logout
 
+com.company.jmixpm.screen.timeentry/timeEntryBrowse.caption=Time entries
+com.company.jmixpm.screen.timeentry/timeEntryBrowse.menu=Time entries
+com.company.jmixpm.screen.timeentry/timeEntryEdit.caption=Time entry editor
+
 com.company.jmixpm.screen.user/UserBrowse.caption=Users
 com.company.jmixpm.screen.user/UserEdit.caption=User editor
 com.company.jmixpm.screen.user/additional=Additional
@@ -55,6 +72,9 @@ com.company.jmixpm/menu.application=Application
 com.company.jmixpm.screen.project/projectBrowse.caption=Projects
 com.company.jmixpm.screen.project/projectBrowse.menu=Projects
 com.company.jmixpm.screen.project/projectEdit.caption=Project editor
+
+com.company.jmixpm.screen.projectstats/projectStatsBrowse.caption=Project statses
+com.company.jmixpm.screen.projectstats/projectStatsBrowse.menu=Project statses
 
 com.company.jmixpm.screen.task/taskBrowse.caption=Tasks
 com.company.jmixpm.screen.task/taskBrowse.menu=Tasks
